data/derived/fa15/progs/unify/prog3580.ml.out
Characters 23-24:
  let _ = padZero [9;9] [1;0;0;2];;
                         ^
Error: This expression has type int but an expression was expected of type
         int list
